# smithworks-cli

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
smithworks_cli/: cli.py
tests/: test_smithworks_cli.py
