[tool.poetry]
name = "smithworks-cli"
version = "0.1.0"
description = "A CLI for deploying FoundryVTT(https://foundryvtt.com/) to   different hosts like digital ocean, aws, etc."
authors = ["Zach Bricker <zach@datageek.io>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.0.8"
zipp = "^3.1.0"
importlib-metadata = "^1.6.0"
pyparsing = "^2.4.6"
six = "^1.14.0"
attrs = "^19.3.0"
click = "^7.1.1"
colorama = "^0.4.3"
more-itertools = "^8.2.0"
packaging = "^20.3"
pluggy = "^0.13.1"
py = "^1.8.1"
shellingham = "^1.3.2"
wcwidth = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "*", allow-prereleases = true }
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
smith = "smithworks_cli.cli:main"